# SecureEdgePlatform

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CppMiniDB/: .gitignore  CMakeLists.txt  README.md
CppMiniDB/include/cppminidb/: MiniDB.hpp  SensorLogRow.hpp
CppMiniDB/src/: MiniDB.cpp  SensorLogRow.cpp
CppMiniDB/tests/: test_minidb.cpp
EdgeAgent/: CMakeLists.txt  README.md
EdgeAgent/include/cppminidb/: SensorLogRow.hpp
EdgeAgent/include/edgeagent/: EdgeAgent.hpp  TelemetryPublisher.hpp
EdgeAgent/src/: EdgeAgent.cpp  TelemetryPublisher.cpp
EdgeAgent/tests/: test_edgeagent.cpp  test_telemetry.cpp
EdgeGateway/: CMakeLists.txt  README.md
EdgeGateway/config/: gateway_config.json
EdgeGateway/data/: gateway_config.json
EdgeGateway/data/logs/: output.json
EdgeGateway/include/: AgentChannel.hpp  ConsoleChannel.hpp  EdgeGateway.hpp  FileChannel.hpp  GatewayConfig.hpp  IGatewayChannel.hpp
EdgeGateway/src/: AgentChannel.cpp  ConsoleChannel.cpp  EdgeGateway.cpp  FileChannel.cpp  GatewayConfig.cpp  SensorLogRow.cpp  main_gateway.cpp
EdgeGateway/tests/: test_gateway.cpp
SecureBootSimulator/: CMakeLists.txt  README.md
SecureBootSimulator/data/: boot_config.json
SecureBootSimulator/include/secureboot/: BootConfig.hpp  BootSimulator.hpp  BootStage.hpp  SignatureVerifier.hpp  sha256.hpp
SecureBootSimulator/src/: BootConfig.cpp  BootSimulator.cpp  BootStage.cpp  SignatureVerifier.cpp  main.cpp
SecureBootSimulator/tests/: TestPaths.hpp  test_boot_config.cpp  test_boot_stage.cpp  test_bootsimulator.cpp
SecureBootSimulator/tests/data/: good_config.json
SecureEdgePlatformController/: CMakeLists.txt  README.md
SecureEdgePlatformController/include/: SecureEdgePlatformController.hpp
SecureEdgePlatformController/include/shell/: PlatformShell.hpp
SecureEdgePlatformController/src/: SecureEdgePlatformController.cpp
SecureEdgePlatformController/src/shell/: PlatformShell.cpp
SecureEdgePlatformRunner/: CMakeLists.txt  README.md
SecureEdgePlatformRunner/src/: main.cpp
SensorSimulator/: CMakeLists.txt
SensorSimulator/include/cli/: EdgeCLI.hpp  EdgeShell.hpp
SensorSimulator/include/cli/commands/: AddCommand.hpp  ClearLogCommand.hpp  CommandRegistry.hpp  ExportLogCommand.hpp  HelpCommand.hpp  ICommand.hpp  ImportLogCommand.hpp  InjectCommand.hpp  ListCommand.hpp  LoadLogCommand.hpp  LogStatusCommand.hpp  PlotCommand.hpp  QueryLogCommand.hpp  RemoveCommand.hpp  ResetCommand.hpp  RunCommand.hpp  RunPlotCommand.hpp  SaveLogCommand.hpp  StatusCommand.hpp  StepCommand.hpp  StopCommand.hpp  StopPlotCommand.hpp  TickCommand.hpp
SensorSimulator/include/scheduler/: SensorScheduler.hpp
SensorSimulator/include/sensors/: ISensor.hpp  Sample.hpp  SimpleSensor.hpp  SimpleTempSensor.hpp  Spec.hpp
SensorSimulator/src/: main_shell.cpp
SensorSimulator/src/cli/: EdgeCLI.cpp  EdgeShell.cpp
SensorSimulator/src/scheduler/: SensorScheduler.cpp
SensorSimulator/tests/: test_cli.cpp  test_sensors.cpp
tests/: test_full_platform.cpp
